<resources>
    <string name="app_name">ProvaPratica</string>
    <string name="title_login">INSIRA SEUS DADOS</string>
    <string name="signup">Ainda não tem conta? Crie uma!</string>
    <string name="login_email">insira seu e-mail</string>
    <string name="login_senha">insira sua senha</string>
    <string name="cadastrar_dados">INFORME SEUS DADOS</string>
    <string name="nome_cadastro">DIGITE SEU NOME:</string>
    <string name="email_cadastro">DIGITE SEU E-MAIL:</string>
    <string name="senha_cadastro">DIGITE SUA SENHA</string>
    <string name="btn_enviar">ENVIAR</string>

    <!-- Mensagens de erro-->
    <string name="erro_campos_nao_preenchidos">Por favor preencha todos os campos.</string>
    <string name="ero_sem_dados">Nenhum dado foi encontrado. Por favor adicine novos sites.</string>

    <!-- Key onSaveInstanceState  -->
    <string name="key_save_email">key_save_email</string>
    <string name="key_save_senha">key_save_senha</string>
    <string name="key_save_nome">key_save_nome</string>
    <string name="title_activity_add_site">AddSiteActivity</string>
</resources>
