<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                style="@style/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cadastrar_dados"
                android:textColor="#808080"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView3"
                style="@style/txtTitleBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/nome_cadastro"
                android:textColor="#4d4d4d"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView3"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_input"
                android:inputType="textCapSentences"
                android:padding="5dp"
                android:textColor="@color/colortext" />

            <TextView
                android:id="@+id/textView4"
                style="@style/txtTitleBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edNome"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/email_cadastro"
                android:textColor="#4d4d4d"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView4"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_input"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColor="@color/colortext" />

            <TextView
                android:id="@+id/textView5"
                style="@style/txtTitleBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edEmail"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/senha_cadastro"
                android:textColor="#4d4d4d"
                android:textSize="12sp" />

            <com.subhrajyoti.passwordview.PasswordView
                android:id="@+id/edSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView5"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_input"
                android:inputType="textPassword"
                android:maxLength="8"
                android:padding="5dp"
                android:textColor="@color/colortext" />

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/edSenha"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button_principal"
                android:padding="10dp"
                android:text="@string/btn_enviar"
                android:textColor="@color/background"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>